; ModuleID = '/home/carl/AnghaBench/micropython/ports/teensy/extr_timer.c_timer_init0.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/teensy/extr_timer.c_timer_init0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PYB_TIMER_OBJ_ALL_NUM = common dso_local global i64 0, align 8
@pyb_timer_obj_all = common dso_local global i32** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @timer_init0() #0 {
  %1 = alloca i64, align 8
  store i64 0, i64* %1, align 8
  br label %2

2:                                                ; preds = %10, %0
  %3 = load i64, i64* %1, align 8
  %4 = load i64, i64* @PYB_TIMER_OBJ_ALL_NUM, align 8
  %5 = icmp ult i64 %3, %4
  br i1 %5, label %6, label %13

6:                                                ; preds = %2
  %7 = load i32**, i32*** @pyb_timer_obj_all, align 8
  %8 = load i64, i64* %1, align 8
  %9 = getelementptr inbounds i32*, i32** %7, i64 %8
  store i32* null, i32** %9, align 8
  br label %10

10:                                               ; preds = %6
  %11 = load i64, i64* %1, align 8
  %12 = add i64 %11, 1
  store i64 %12, i64* %1, align 8
  br label %2

13:                                               ; preds = %2
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
